kustomize/overlays/beta/visma-com/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-utdanning-vurdering
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`beta.felleskomponent.no`) && PathPrefix( `/utdanning/vurdering`) && Headers(`x-org-id`, `visma.com`)"
      kind: Rule
      services:
        - name: fint-core-consumer-utdanning-vurdering
          port: 8080
